--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ a {
       <td></td>
     </tr>  
     <tr>
-      <td>SR教師端 (未完成，未上線)</td>
+      <td>SR教師端</td>
       <td><a href="SRteacher/index.html" target="_blank">DEMO</a></td>
       <td></td>
     </tr>
